part13-保障集群内节点安全和网络安全/hostnet.yaml
apiVersion: v1
kind: Pod
metadata:
  name: p13-1
spec:
  hostNetwork: true
  containers:
  - image: 192.168.226.3:10000/serv:1.0
    name: c1
    stdin: true
    tty: true
  - image: 192.168.226.3:10000/serv:1.0
    name: c2
    stdin: true
    tty: true
