part13-保障集群内节点安全和网络安全/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zch
spec:
  podSelector:
    matchExpressions:
    - key: func
      values: ["serv"]
      operator: In
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: func
          values: ["clnt"]
          operator: In
    ports:
    - port: 9190
